<resources>
    <string name="app_name">Login</string>
    <string name="_logo">Logo</string>


        <string name="sign_in_btn">Sign In</string>
<string name="sign_up_btn">Sign Up</string>
    <string name="sign_up_prompt"><u>New to Us?</u></string>
    <string name="remember_me">Remember me</string>
    <string name="username">username</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="password">password</string>
    <string name="create">Create Account</string>
    <string name="create_account">Create Account</string>
    <string name="Full_Name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_email_address">Email Address</string>
    <string name="back_game">Back To The Game</string>
    <string name="edit_username">Edit Username</string>
    <string name="change_password">Change Password</string>
    <string name="achievements">Achievements</string>
    <string name="log_out">Log Out</string>
    <string name="mission_full_stack_development">Mission: Full Stack Development</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="todo">TODO</string>
    <string name="mountain">Mountain</string>
    <string name="sending_failed">SENDING FAILED</string>
    <string name="text_window">Text window</string>
    <string name="choose_which_skill_set_you_d_like_to_learn">Titlebr</string>
    <string name="front_end_development">frontendbtn</string>
    <string name="back_end_developmnt">bkendbtn</string>
    <string name="full_stack_developer">fullstkbtn</string>
    <string name="action_settings">actsettings</string>
    <string name="new_message">New Message!</string>
    <string name="sending_failed_computer">sending failed computer</string>
    <string name="sign_up">Sign up!</string>
</resources>
