<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #BEB6DC">

    <ImageView
        android:id="@+id/image6"
        android:layout_width="282dp"
        android:layout_height="382dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="304dp"
        android:contentDescription="@string/mountain"
        android:rotation="0"
        android:scaleX="1.5"
        android:scaleY="1"
        android:src="@drawable/ic_mountain"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image5"
        android:layout_width="663dp"
        android:layout_height="616dp"
        android:layout_marginTop="48dp"
        android:rotation="0"
        android:scaleX="2"
        android:scaleY="1"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="@+id/image4"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:background="@drawable/circular_button"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:strokeColor="#B70000"
        app:strokeWidth="10dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="315dp"
        android:layout_marginLeft="315dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="384dp"
        android:background="@drawable/circular_button"
        android:text="@string/_2"
        android:textColor="#000000"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288"
        app:strokeColor="#B70000"
        app:strokeWidth="10dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="187dp"
        android:layout_marginBottom="464dp"
        android:background="@drawable/circular_button"
        android:text="@string/_3"
        android:textColor="#000000"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        app:strokeColor="#B70000"
        app:strokeWidth="10dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:background="@drawable/circular_button"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#481B82"
        app:iconTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#B70000"
        app:strokeWidth="10dp" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="240dp"
        android:background="#FFFFFF"
        android:rotation="48"
        android:scaleX="1"
        android:scaleY="0.6"
        android:src="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:tint="#E7DFFF" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="441dp"
        android:rotation="48"
        android:scaleX="1"
        android:scaleY="0.6"
        android:src="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888"
        app:tint="#2D2773" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="321dp"
        android:contentDescription="@string/todo"
        android:rotation="-80"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#E7DFFF" />

    <ImageView
        android:id="@+id/image4"
        android:layout_width="470dp"
        android:layout_height="342dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="69dp"
        android:rotation="0"
        android:rotationY="-181"
        android:scaleX="2.1"
        android:scaleY="1.8"
        android:src="@drawable/ic_customshape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image5"
        app:layout_constraintVertical_bias="0.553" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/mission_full_stack_development"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>